--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,11 @@ dependencies = [
     "alembic (>=1.15.2,<2.0.0)",
     "black (>=25.1.0,<26.0.0)",
     "pydantic-settings (>=2.9.1,<3.0.0)",
+    "langchain-community (<0.3.24)",
 ]
+
+[tool.poetry]
+packages = [{ include = "pdf_analyzer", from = "src" }]
 
 
 [build-system]
