--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,10 @@ dependencies = [
 packages = [{ include = "pdf_analyzer", from = "src" }]
 
 
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.11.11"
+black = "^25.1.0"
+
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
